   * higher resolutions of the application icon have been added and are now
     stored in the hicolor icon theme's directory
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Italian, Spanish
 * Lua API:
   * New wesnoth.unit_types[].advances_to getter.
   * New wesnoth.unit_types[].advances_from getter.
   * unit.id is now a modifiable field for off-map (Lua-only) units.
 * Multiplayer:
   * Dark Forecast: Fixed broken faction and leader selection.
   * Rename the Khalifate to Dunefolk.
 * Performance:
   * GUI2 windows no longer redraw everything 50 times per second. This reduces
     CPU usage in fullscreen windows such as MP lobby by about 85 %.
   * Miscellaneous low-level optimizations in game rendering code, improving
     performance ingame by up to 50 %.
 * User Interface:
   * Removed broken Unit Box and Widescreen themes.
   * Fixed a bug that partially prevented movement feedback announce messages
     to be displayed (UI regression bug #2130, affecting 1.13.8 and 1.13.10).
   * New, greatly simplified display of games in the MP Lobby.
   * Fixed individual Join/Observe buttons acting on the wrong game in the MP
     Lobby.
   * Greatly improved behavior of sliders.
   * Fixed crash when modifying an existing friend entry in Preferences.
   * Fixed players being unable to start campaigns in MP mode.
 * WML Engine:
   * Added a major_amla option in AMLAs to keep the XP bar teal-white rather
     than purple for AMLAs that behave similar to regular advancements.
     (for example, Quenoth Youth in UtBS or similar unit lines)
   * File paths with backslashes are no longer allowed. This ensures that a UMC
     author can't accidentally use them and make an add-on that breaks on
     GNU/Linux and macOS.
   * File paths are now case sensitive even on Windows.
   * [show_if] is now usable in [objectives] subtag [gold_carryover].
   * Macro SCEPTRE_OF_FIRE_EFFECT damage increased to 15x4 so Sceptre is an